# Yertle-The-Turtle

./: .gitignore  CMakeLists.txt  README.md  Yertle-The-Turtle.sln  Yertle-The-Turtle.vcxproj  Yertle-The-Turtle.vcxproj.filters
data/: 104.txt  3.txt  5.txt  7.txt  85.txt
documentation/: final_documentation.tex  initial_documentation.tex
src/: ResultsTable.cpp  ResultsTable.h  Throne.cpp  Throne.h  ThroneDynamicProgramming.cpp  ThroneDynamicProgramming.h  ThroneFast.cpp  ThroneFast.h  ThroneGreedy.cpp  ThroneGreedy.h  ThroneNaive.cpp  ThroneNaive.h  Timer.cpp  Timer.h  Turtle.cpp  Turtle.h  main.cpp  project_declarations.h
